# apps.web.browser

./: .gbs.conf  .gitignore  AUTHORS  Browser-project-file.xml  Browser.files  Browser.includes  CMakeLists.txt  INSTALL  LICENSE.Flora  NOTICE  browser_config.h  build.sh  build_mobile.sh  chLang.py  main.cpp  manifest.xml.in  manifest.xml.in.mb  org.tizen.browser.changes  org.tizen.browser.efl  org.tizen.browser.manifest  org.tizen.browser.rule  org.tizen.browser.spec  org.tizen.browser.xml  project.config  project_def.prop  tizen-manifest.xml
edc/: CMakeLists.txt  bookmark-edit-view.edc  bookmark-view.edc  br-genlist.edc  browser-bookmark-view.edc  browser-common.edc  browser-define.edc  browser-genlist.edc  browser-macro.edc  browser-most-visited.edc  browser-multi-window.edc  browser-naviframe.edc  browser-picker-layout.edc  browser-popup-lite.edc  browser-popup.edc  browser-predictive-history.edc  browser-settings.edc  browser-view-control-bar.edc  browser-view-find-word-layout.edc  browser-view-main.edc  browser-view-progressbar.edc  browser-view-url-layout.edc  browser-view.edc  config.edc  find-on-page.edc  history-view.edc  macro.edc  more-menu-manager.edc  most-visited-sites.edc  most-visited.edc  multiwindow-panes.edc  multiwindow-view.edc  predictive-history-genlist-lite.edc  predictive-history.edc  progress-bar.edc  reader.edc  scrap-view.edc  settings.edc  tab-manager-view-lite.edc  tray-toolbar.edc  (+3 more)
edc/HD_720x1280/: CMakeLists.txt  br-hd-genlist-defines.edc  browser-genlist.edc  naviframe.edc
edc/WVGA_480x800/: CMakeLists.txt  bookmark-view.edc  br-wvga-genlist-defines.edc  browser-view.edc  config.edc  find-on-page.edc  gengrid.edc  main-toolbar.edc  main-view.edc  tab-manager-view-gengrid.edc  url-bar.edc  url-input-bar.edc
edc/genlist/: genlist.edc  genlist_decorate.edc  genlist_expandable.edc  genlist_groupindex.edc  genlist_macro.edc  genlist_normal.edc  genlist_sweep.edc  genlist_textblock_style.edc  tizen-hd-inc.edc
res/: CMakeLists.txt
res/database/: .pref.db  .pref.db-journal
res/js/: AutoSave.js  nightmode.js  reader_webapp_icon_capability.js  reader_webapp_icon_sizes.js  reader_webapp_icon_urls.js  rss.js
res/po_lite/: CMakeLists.txt
services/: CMakeLists.txt
services/BookmarkDetailsUI/: BookmarkDetailsUI.cpp  BookmarkDetailsUI.h  CMakeLists.txt
services/BookmarkFlowUI/: BookmarkFlowUI.cpp  BookmarkFlowUI.h  CMakeLists.txt
services/BookmarkManagerUI/: AddNewFolderPopup.cpp  AddNewFolderPopup.h  BookmarkManagerUI.cpp  BookmarkManagerUI.h  CMakeLists.txt
services/BookmarkService/: BookmarkService.cpp  BookmarkService.h  CMakeLists.txt
services/BookmarksUI/: BookmarksUI.cpp  BookmarksUI.h  CMakeLists.txt
services/CertificateService/: CertificateContents.cpp  CertificateContents.h
services/FavoriteService/: CMakeLists.txt  FavoriteService.cpp  FavoriteService.h
services/FindOnPageUI/: CMakeLists.txt  FindOnPageUI.cpp  FindOnPageUI.h
services/HistoryService/: CMakeLists.txt  HistoryItem.cpp  HistoryItem.h  HistoryService.cpp  HistoryService.h  HistoryServiceTools.cpp  HistoryServiceTools.h
services/HistoryUI/: CMakeLists.txt  HistoryDeleteManager.cpp  HistoryDeleteManager.h  HistoryPeriod.cpp  HistoryPeriod.h  HistoryUI.cpp  HistoryUI.h  HistoryUIFocusManager.cpp  HistoryUIFocusManager.h
services/HomeGenerator/: CMakeLists.txt  HomeGenerator.cpp  HomeGenerator.h  HomePage.css  HomePage.html  navi.js
services/MainUI/: CMakeLists.txt  DetailPopup.cpp  DetailPopup.h  MainUI.cpp  MainUI.h
services/MoreMenuUI/: AddBookmarkPopup.cpp  AddBookmarkPopup.h  CMakeLists.txt  MoreMenuUI.cpp  MoreMenuUI.h  NewFolderPopup.cpp  NewFolderPopup.h
services/PlatformInputManager/: CMakeLists.txt  PlatformInputManager.cpp  PlatformInputManager.cpp.autosave  PlatformInputManager.h
services/QuickAccess/: CMakeLists.txt  DetailPopup.cpp  DetailPopup.h  QuickAccess.cpp  QuickAccess.h
services/ReaderUI/: .ReaderUI.cpp.swo  CMakeLists.txt  ReaderUI.cpp  ReaderUI.h
services/SessionStorage/: CMakeLists.txt  Session.cpp  Session.h  SessionStorage.cpp  SessionStorage.h  SqlStorage.cpp  SqlStorage.h
services/SettingsUI/: CMakeLists.txt  SettingsAFCreator.cpp  SettingsAFCreator.h  SettingsAFCreator_mob.cpp  SettingsAFCreator_mob.h  SettingsAFProfile.cpp  SettingsAFProfile.h  SettingsAFProfile_mob.cpp  SettingsAFProfile_mob.h  SettingsAdvanced.cpp  SettingsAdvanced.h  SettingsAdvanced_mob.cpp  SettingsAdvanced_mob.h  SettingsDelPersData.cpp  SettingsDelPersData.h  SettingsDelPersData_mob.cpp  SettingsDelPersData_mob.h  SettingsHomePage.cpp  SettingsHomePage.h  SettingsHomePage_mob.cpp  SettingsHomePage_mob.h  SettingsMain.cpp  SettingsMain.h  SettingsMain_mob.cpp  SettingsMain_mob.h  SettingsManager.cpp  SettingsManager.h  SettingsPrettySignalConnector.h  SettingsPrivacy.cpp  SettingsPrivacy.h  SettingsPrivacy_mob.cpp  SettingsPrivacy_mob.h  SettingsSearchEngine.cpp  SettingsSearchEngine.h  SettingsSearchEngine_mob.cpp  SettingsSearchEngine_mob.h  SettingsUI.cpp  SettingsUI.h  SettingsUI_mob.cpp  SettingsUI_mob.h  (+1 more)
services/SimpleUI/: BookmarksManager.cpp  BookmarksManager.h  ButtonBar.cpp  ButtonBar.h  CMakeLists.txt  CertificateContents.cpp  CertificateContents.h  ContentPopup.cpp  ContentPopup.h  ContentPopup_mob.cpp  ContentPopup_mob.h  HistoryList.cpp  HistoryList.h  InputPopup.cpp  InputPopup.h  MobilePopup_mob.cpp  MobilePopup_mob.h  NetworkErrorHandler.cpp  NetworkErrorHandler.h  NotificationPopup.cpp  RadioPopup.cpp  RadioPopup.h  RelatedWebPages.cpp  RelatedWebPages.h  SearchBox.cpp  SearchBox.h  Settings.cpp  Settings.h  SimplePopup.cpp  SimplePopup.h  SimpleScroller.cpp  SimpleScroller.h  SimpleUI.cpp  SimpleUI.cpp.orig  SimpleUI.h  TabList.cpp  TabList.h  TextPopup_mob.cpp  TextPopup_mob.h  ViewManager.cpp  (+5 more)
services/SimpleURI/: CMakeLists.txt  SimpleURI.cpp  SimpleURI.h
services/StorageService/: BookmarksSQLite.h  BookmarksStorage.h  CMakeLists.txt  CertificateStorage.cpp  CertificateStorage.h  Field.cpp  FoldersStorage.cpp  FoldersStorage.h  HistoryException.h  HistorySQLite.h  HistoryStorage.h  (+8 more)
user-agent-select/: CMakeLists.txt
(+909 files in other folders)
