project(services)

add_subdirectory(WebKitEngineService)
add_subdirectory(MoreMenuUI)
add_subdirectory(MainUI)
add_subdirectory(HistoryUI)
add_subdirectory(TabUI)
add_subdirectory(SimpleUI)
# MERGE_ME
#add_subdirectory(SettingsUI)
add_subdirectory(SimpleURI)
add_subdirectory(BookmarkManagerUI)
add_subdirectory(StorageService)
add_subdirectory(HistoryService)
add_subdirectory(PlatformInputManager)
add_subdirectory(SessionStorage)
add_subdirectory(BookmarkService)
