project(services)

add_subdirectory(WebKitEngineService)
add_subdirectory(MoreMenuUI)
add_subdirectory(QuickAccess)
add_subdirectory(HistoryUI)
add_subdirectory(TabUI)
add_subdirectory(FindOnPageUI)
add_subdirectory(SimpleUI)
add_subdirectory(SettingsUI)
add_subdirectory(WebPageUI)
add_subdirectory(BookmarkManagerUI)
add_subdirectory(StorageService)
add_subdirectory(HistoryService)
add_subdirectory(TabService)
add_subdirectory(PlatformInputManager)
add_subdirectory(SessionStorage)
add_subdirectory(BookmarkService)
add_subdirectory(ZoomUI)
